--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,9 @@
                     android:id="@+id/my_progress"
                     style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                     android:layout_width="match_parent"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:progressTint="@color/cardview_shadow_start_color"
                     android:layout_height="22dp" />
 
                 <TextView
@@ -35,17 +38,6 @@
                     style="@style/TextViewMargin"
                     android:text="--" />
 
-                <TextView
-                    android:id="@+id/my_liveData"
-                    android:layout_marginVertical="5dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:includeFontPadding="false"
-                    android:maxLines="100"
-                    android:text="--"  />
                 <Button
                     android:id="@+id/my_cancelButton"
                     style="@style/ButtonMargin"
