--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,6 @@
             android:layout_marginTop="88dp"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
-            android:background="@color/teal_200"
             android:orientation="vertical">
             <EditText
                     android:id="@+id/etUsername"
@@ -21,6 +20,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
+
+                    android:background="@drawable/edittext_border"
+                    android:padding="10dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#888888"
+
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:cursorVisible="true"
@@ -34,6 +39,12 @@
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
                     android:layout_marginTop="16dp"
+
+                    android:background="@drawable/edittext_border"
+                    android:padding="10dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#888888"
+
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:cursorVisible="true"
