--- a/feature/productlist/src/main/res/navigation/nav_graph.xml
+++ b/feature/productlist/src/main/res/navigation/nav_graph.xml
@@ -5,6 +5,6 @@
     app:startDestination="@id/viewPagerFragment">
     <fragment
         android:id="@+id/viewPagerFragment"
-        android:name="com.example.viewpage.ViewPagerFragment"
+        android:name="feature.viewpage.ViewPagerFragment"
         android:label="ViewPagerFragment" />
 </navigation>
